@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: b_stdsock.c,v 1.2 2002/05/01 23:43:38 dupuy Exp $";
+static char libbk__rcsid[] = "$Id: b_stdsock.c,v 1.3 2002/05/02 00:38:30 seth Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -59,13 +59,13 @@ int bk_stdsock_multicast(bk_s B, int fd, u_char ttl, struct bk_netaddr *maddrgro
     BK_RETURN(B, -1);
   }
     
-  memset(&mreq, 0, sizeof(mreq));
-  // <TODO> Silly linux -- multicast is for all address families</TODO>
-  memcpy(&mreq.imr_multiaddr, &maddrgroup->bna_inet, sizeof(mreq.imr_multiaddr));
-  mreq.imr_interface.s_addr = INADDR_ANY;
-
   if (BK_FLAG_ISCLEAR(flags, BK_MULTICAST_NOJOIN) && maddrgroup)
   {
+    memset(&mreq, 0, sizeof(mreq));
+    // <TODO> Silly linux -- multicast is for all address families</TODO>
+    memcpy(&mreq.imr_multiaddr, &maddrgroup->bna_inet, sizeof(mreq.imr_multiaddr));
+    mreq.imr_address.s_addr = INADDR_ANY;
+
     if (setsockopt(fd, IPPROTO_IP, IP_ADD_MEMBERSHIP, &mreq, sizeof(mreq)) < 0)
     {
       bk_error_printf(B, BK_ERR_ERR, "Could not set multicast group preference to %s: %s\n", inet_ntoa(mreq.imr_multiaddr), strerror(errno));
