@@ -1,3 +1,8 @@
+2002-05-01  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_stdsock.c (bk_stdsock_multicast): Move maddrgroup
+	reference inside of maddrgroup protection
+
 2002-05-01  James Tanis  <jtt@saint.sysdetect.com>
 
 	* lib/b_string.c (bk_string_atod): Use portable math functions
